# IRLS_plane_fitting

./: CMakeLists.txt  LICENSE  README.md
data/: create_dateset.py  dataset.txt  plot_result.py
include/: irls_plane_fitting.hpp
src/: irls_plane_fitting.cpp  main.cpp
